--- a/breast.html
+++ b/breast.html
@@ -8,6 +8,8 @@
 
     <!-- Animate CSS -->
     <link rel="stylesheet" href="assets/vendors/animate-css/animate.css">
+    <!-- Lightbox CSS -->
+    <link rel="stylesheet" href="assets/vendors/lightbox/lightbox.min.css">
     <!-- Boostrap -->
     <link rel="stylesheet" href="assets/vendors/bootstrap/bootstrap.min.css">
     <!-- Main Stylesheet -->
@@ -60,7 +62,7 @@
                             <a class="nav-link font-futura color-primary text-uppercase" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase active" href="philosophy.html">Our Philosophy</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" href="philosophy.html">Our Philosophy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link font-futura color-primary text-uppercase" href="#contact">cONTACT</a>
@@ -76,7 +78,7 @@
     <!-- Header Ends -->
 
     <!-- Banner Starts -->
-    <section class="banner__subpage philosophy-banner">
+    <section class="banner__subpage breast-banner">
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
@@ -100,71 +102,78 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <h2 class="animated wow fadeIn">
-                        Our Philosophy
-                    </h2>
+                    <div class="banner__inner">
+                        <span class="animated wow fadeIn">Surgical</span>
+                        <h2 class="animated wow fadeIn">
+                            Breast
+                        </h2>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Banner Ends -->
 
-    <!-- Banner Bottom Starts -->
-    <section class="banner-bottom">
+    <!-- Face Starts -->
+    <section class="breast">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <p class="wow animated fadeInUp">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. 
-                    </p>
+                    <div class="face__inner">
+                        <h2>Enhance your beauty</h2>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        </p>
+                        <p>
+                            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        </p>
+                        <p>
+                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row breast__gallery justify-content-center">
+                <div class="col-md-4 wow fadeInUp animated">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/breast/item1.jpg" alt="breast gallery item" class="img-fluid example-image">
+                    </a>
+                    <span>Breast Rejuvenation</span>
+                </div>
+                <div class="col-md-4 wow fadeInUp animated">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/breast/item2.jpg" alt="breast gallery item" class="img-fluid example-image">
+                    </a>
+                    <span>Breast Augmentation</span>
+                </div>
+                <div class="col-md-4 wow fadeInUp animated">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/breast/item3.jpg" alt="breast gallery item" class="img-fluid example-image">
+                    </a>
+                    <span>Breast Reduction</span>
+                </div>
+                <div class="col-md-4 wow fadeInUp animated">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/breast/item4.jpg" alt="breast gallery item" class="img-fluid example-image">
+                    </a>
+                    <span>Breast Lift</span>
+                </div>
+                <div class="col-md-4 wow fadeInUp animated">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/breast/item5.jpg" alt="breast gallery item" class="img-fluid example-image">
+                    </a>
+                    <span>Breast Reconstruction</span>
+                </div>
+                <div class="col-md-4 wow fadeInUp animated">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/breast/item6.jpg" alt="breast gallery item" class="img-fluid example-image">
+                    </a>
+                    <span>Male Breast (Gynecomastia)</span>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Banner Bottom Ends -->
-
-    <!-- Philosophy Section Starts -->
-    <section class="philosophy">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="philosophy-inner">
-                        <h2 class="title wow animated fadeInUp">Understanding</h2>
-                        <p class="description wow animated fadeInUp">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
-                        </p>
-
-                        <h2 class="title wow animated fadeInUp">Aesthetics</h2>
-                        <p class="description wow animated fadeInUp">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
-                        </p>
-
-                        <h2 class="title wow animated fadeInUp">Precision</h2>
-                        <p class="description wow animated fadeInUp">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
-                        </p>
-
-                        <div class="wow animated fadeInUp">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo. Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum lectus urna nec.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="btns_group wow animated wow fadeInUp">
-                        <button class="btn button-secondary">
-                            Our Practices
-                        </button>
-                        <button class="btn button-secondary">
-                            Our Team
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Philosophy Section Ends -->
+    <!-- Face Ends -->
 
     <!-- Contact Form Starts -->
     <section class="contact-form" id="contact">
@@ -342,6 +351,9 @@
 
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
+    <!-- Lightbox JS -->
+    <script src="assets/vendors/lightbox/lightbox.min.js"></script>
+    <script src="assets/vendors/lightbox/lightbox-plus-jquery.min.js"></script>
     <!-- Main Script -->
     <script src="assets/js/app.js"></script>
 </body>
