--- a/skincare.html
+++ b/skincare.html
@@ -52,6 +52,7 @@
                             </a>
                             <ul class="dropdown-menu level-one">
                                 <li><a class="dropdown-item" href="skincare.html">Skincare</a></li>
+                                <li><a class="dropdown-item" href="futNfue.html">Fut & Fue</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -61,7 +62,7 @@
                             <a class="nav-link font-futura color-primary text-uppercase" href="philosophy.html">Our Philosophy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">cONTACT</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" href="#contact">cONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -279,7 +280,7 @@
     <!-- Skincare Ends -->
 
     <!-- Contact Form Starts -->
-    <section class="contact-form">
+    <section class="contact-form" id="contact">
         <div class="container">
             <div class="row align-items-center">
                 <div class="contact-form__inner">
