--- a/team.html
+++ b/team.html
@@ -44,6 +44,7 @@
                             </a>
                             <ul class="dropdown-menu level-one">
                                 <li><a class="dropdown-item" href="face.html">Face</a></li>
+                                <li><a class="dropdown-item" href="breast.html">Breast</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -52,6 +53,7 @@
                             </a>
                             <ul class="dropdown-menu level-one">
                                 <li><a class="dropdown-item" href="skincare.html">Skincare</a></li>
+                                <li><a class="dropdown-item" href="futNfue.html">Fut & Fue</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -59,6 +61,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link font-futura color-primary text-uppercase" href="philosophy.html">Our Philosophy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link font-futura color-primary text-uppercase" href="#contact">cONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -286,7 +291,7 @@
     <!-- Team Ends -->
 
     <!-- Contact Form Starts -->
-    <section class="contact-form">
+    <section class="contact-form" id="contact">
         <div class="container">
             <div class="row align-items-center">
                 <div class="contact-form__inner">
